--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,11 @@
 {
     "env": {
-        "browser": true,
-        "commonjs": true,
-        "es2021": true
+      "node": true,
+      "es6": true
     },
-    "extends": "google",
+    "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaVersion": "latest"
+      "ecmaVersion": 2018
     },
     
     "rules": {
