--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASS=
+MYSQL_DB=backend-ii-express-mysql
+MYSQL_PORT=3306
