--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ dist
 .pnp.*
 
 MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PASS=
+MYSQL_USER=express mysql
+MYSQL_PASS=password12345
 MYSQL_DB=backend-ii-express-mysql
 MYSQL_PORT=3306
