--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
+    "jade": "^0.29.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.9.3"
+    "mysql2": "^3.9.3",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^9.0.0",
